Added placeholder error message for testing

--- a/client/blocks/importer/wordpress/import-everything/import-users/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/import-users/style.scss
@@ -16,6 +16,12 @@
 		}
 	}
 
+	.import__user-migration-error-message {
+		display: flex;
+		justify-content: center;
+		font-size: 0.875rem;
+	}
+
 	.import__user-migration-list {
 		margin: 0 auto;
 
