--- a/client/my-sites/github-deployments/connected/repositories/style.scss
+++ b/client/my-sites/github-deployments/connected/repositories/style.scss
@@ -1,61 +1,28 @@
-.github-deployments-empty-repositories {
-	margin: auto;
+.github-deployments-repositories {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	gap: 24px;
-	min-height: 300px;
-
-	&__empty-text {
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__buttons{
-		display: flex;
-		gap: 24px;
-	}
-}
-
-.github-deployments-add-repository-dialog {
-	width: 700px;
-
-	.dialog__content {
-		display: flex;
-		flex-direction: column;
-		gap: 24px;
-	}
-
-	header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-
-		span {
-			font-size: 22px;
-		}
-	}
 
 	&__search-bar {
 		display: flex;
-		align-items: center;
-		gap: 24px;
-		width: 100%;
-		> div {
-			flex-grow: 1;
-		}
-		.components-base-control__field {
-			margin-bottom: 0;
-		}
+		gap: 16px;
 	}
 
-	&__search-account {
-
+	&__search {
+		flex-grow: 1;
+		input {
+			max-width: 400px;
+			height: 43px;
+		}
 	}
+}
 
-	&__label {
+.github-deployments-connect-repository {
+	max-width: 500px;
+	padding-bottom: 32px;
 
+	.form-label {
+		font-weight: 500;
 	}
 
 	.components-select-control {
@@ -80,27 +47,27 @@
 		gap: 8px;
 		font-size: smaller;
 	}
-
-	&__connect-button {
-		display: flex;
-		justify-content: flex-end;
-	}
 }
 
 .github-deployments-repository-list {
-	border-collapse: collapse;
+	font-size: $font-body-small;
 
-	th, td {
+	table {
+		border-collapse: collapse;
+	}
+
+	th,
+	td {
 		padding: 8px 0;
 		font-weight: normal;
 	}
 
 	th:first-child {
-		min-width: 350px;
+		width: 250px;
 	}
 
-	tbody tr {
-		border-bottom: 1px solid var(--color-neutral-10);
+	tbody tr:not(:last-of-type) {
+		border-bottom: 1px solid var(--color-border-subtle);
 	}
 
 	td {
@@ -115,5 +82,9 @@
 
 	tr td:last-child {
 		text-align: right;
+	}
+
+	&__adjust-permissions {
+		font-size: smaller;
 	}
 }
