--- a/client/blocks/signup-form/style.scss
+++ b/client/blocks/signup-form/style.scss
@@ -105,6 +105,9 @@ $font-sf-pro-text: "SF Pro Text", $sans;
 			font-weight: 400;
 			line-height: normal;
 			letter-spacing: 0.2px;
+			span {
+				word-break: break-word;
+			}
 		}
 		label {
 			color: var(--studio-gray-50, #2c3338);
