--- a/client/my-sites/plans-features-main/style.scss
+++ b/client/my-sites/plans-features-main/style.scss
@@ -361,3 +361,10 @@ body.is-section-plans .layout__content .main {
 		}
 	}
 }
+
+body.is-section-stepper,
+body.is-section-signup.is-white-signup {
+	.step-wrapper__header {
+		margin: 24px 20px 38px;
+	}
+}
