--- a/client/my-sites/plugins/search-box-header/style.scss
+++ b/client/my-sites/plugins/search-box-header/style.scss
@@ -216,9 +216,15 @@ main.is-logged-out .search-box-header {
 				transform: scaleX(-1);
 				height: 33px;
 			}
+
 			input.search-component__input[type="search"],
 			input.search-component__input[type="search"]::placeholder {
 				color: var(--studio-gray-50);
+			}
+
+			&.has-focus {
+				border-color: var(--color-neutral-20);
+				box-shadow: none;
 			}
 		}
 	}
