--- a/client/my-sites/github-deployments/connected/repositories/style.scss
+++ b/client/my-sites/github-deployments/connected/repositories/style.scss
@@ -55,6 +55,18 @@
 		border-collapse: collapse;
 	}
 
+	th {
+		.button-plain {
+			text-align: left;
+			line-height: 20px;
+			letter-spacing: -0.15px;
+
+			&:focus {
+				outline: thin dotted;
+			}
+		}
+	}
+
 	th,
 	td {
 		padding: 8px 0;
