GitHub Deployments: support simple repo connect (WIP) (#87215)
* GitHub Deployments: support simple repo connect (WIP)

* Rework UI to match latest mockup
Start listing real repos from API

* 1. Support connecting a repository.
2. Scope repo results to installation

* Restructure code and add basic pagination

* Add sorting

* Allow choosing the branch + fix some type errors

--- a/client/my-sites/github-deployments/connected/style.scss
+++ b/client/my-sites/github-deployments/connected/style.scss
@@ -1,5 +1,25 @@
 .github-deployments-authorized-card {
 	display: flex;
 	flex-direction: column;
-	padding-top: 8px;
+	padding: 0;
+
+	&__header {
+		height: 60px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-bottom: 1px solid var(--color-border-subtle);
+		position: relative;
+
+		button {
+			position: absolute;
+			left: 16px;
+		}
+	}
+
+	&__body {
+		padding: 32px;
+	}
+
 }
+
