--- a/client/my-sites/invites/invite-accept-logged-out/style.scss
+++ b/client/my-sites/invites/invite-accept-logged-out/style.scss
@@ -4,6 +4,11 @@
 $recoleta-font-family: "Recoleta", sans-serif;
 $font-sf-pro-text: "SF Pro Text", $sans;
 body.is-section-accept-invite {
+	.logged-out-wp-logo {
+		position: absolute;
+		left: 24px;
+		top: 24px;
+	}
 	background: #fdfdfd;
 	.invite-accept {
 		margin-top: 50px;
