Fix button focus

--- a/client/my-sites/invites/invite-accept-logged-out/style.scss
+++ b/client/my-sites/invites/invite-accept-logged-out/style.scss
@@ -67,6 +67,12 @@ body.is-section-accept-invite {
 			&:hover {
 				background: #0e64a5;
 			}
+			&:focus {
+				background-color: #0e64a5;
+				border-color: #0e64a5;
+				color: var(--color-text-inverted);
+				box-shadow: none;
+			}
 		}
 		label.form-label {
 			color: var(--studio-gray-60, #50575e);
