--- a/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
@@ -7,7 +7,10 @@
 }
 
 .connect-url__file-picker {
-	display: block;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 	border: 1px dashed #ccc;
 	padding: 2rem 0;
@@ -37,12 +40,22 @@
 	font-size: 0.75rem;
 }
 
-.connect-url__validate-sites-spinner {
-	margin-right: 1rem;
+.connect-url__create-sites-list {
+	padding: 0;
+	margin: 0;
+}
+
+.connect-url__create-sites-list li {
+	list-style-type: none;
+	padding: 0;
 	margin-bottom: 1rem;
 }
 
-.connect-url__validate-sites-spinner-animation {
+.connect-url__create-sites-list li > svg {
+	margin-right: 1rem;
+}
+
+.connect-url__create-sites-spinner-animation {
 	transform-origin: center;
 	animation: spinner 0.6s linear infinite;
 }
@@ -53,10 +66,28 @@
 	}
 }
 
-.connect-url__validate-sites-quantity {
+.connect-url__create-sites-quantity {
 	margin-bottom: 1rem;
 }
 
-.connect-url__validate-sites-row {
+.connect-url__create-sites-row {
+	display: flex;
+}
+
+.connect-url-csv-column-confirmation {
+	.card {
+		margin-bottom: 1px;
+	}
+
+	&__page-title {
+		margin-bottom: 0.5rem;
+	}
+
+	&__page-subtitle {
+		margin-bottom: 2rem;
+	}
+}
+
+.connect-url-csv-column-confirmation__column-picker {
 	display: flex;
 }
