--- a/packages/help-center/src/components/help-center-article-content.scss
+++ b/packages/help-center/src/components/help-center-article-content.scss
@@ -237,4 +237,10 @@
 			display: none;
 		}
 	}
+
+	// Hide the tablist for the WP Support 3 tab component
+	// Context: https://github.com/Automattic/wp-calypso/issues/87340#issuecomment-1937424710
+	.wpsupport3-tab__tablist {
+		display: none;
+	}
 }
