update html and styling for simple mode switcher

--- a/client/components/advanced-credentials/credentials-form/style.scss
+++ b/client/components/advanced-credentials/credentials-form/style.scss
@@ -80,6 +80,10 @@
 	}
 }
 
+.credentials-form__mode-simple-switcher {
+	font-size: $font-body-small;
+}
+
 .credentials-form__row {
 	display: flex;
 	flex-wrap: wrap;
