--- a/client/my-sites/github-deployments/components/create-repository/style.scss
+++ b/client/my-sites/github-deployments/components/create-repository/style.scss
@@ -1,22 +1,15 @@
-@import '@wordpress/base-styles/mixins';
+@import "@wordpress/base-styles/mixins";
 
 .github-deployments-create-repository {
+	display: flex;
+	gap: 24px;
+	color: var(--color-primary);
+
 	.repository-name-formfieldset {
 		display: flex;
 		flex-direction: row;
 		align-items: flex-start;
 		gap: 16px;
-	}
-
-	.action-panel {
-		display: flex;
-	}
-
-	.action-panel__body {
-		display: flex;
-		gap: 16px;
-		flex: 0.5;
-		color: var( --color-text-primary );
 	}
 
 	.card.header-cake {
@@ -32,35 +25,36 @@
 		width: 100%;
 	}
 
-	.form-radios-bar {
-		display: flex;
-		justify-content: space-between;
-		flex-direction: column;
-		gap: 8px;
+	.form-radio__container.checked .form-radio {
+		border: 1px solid var(--color-accent);
+		color: var(--color-accent);
+	}
 
-		> * {
-			display: flex;
-			flex: 1;
-			font-size: 0.75rem;
-			margin: 0;
-			border: 1px solid var( --color-neutral-10 );
-			cursor: pointer;
-			background: none;
-			transition: box-shadow 0.1s linear;
-			height: 42px;
-			align-items: center;
-			box-sizing: border-box;
-			padding: 6px 12px;
-			border-radius: 2px;
-			white-space: nowrap;
+	.form-radio__container {
+		border: 1px solid var(--color-neutral-10);
+		box-sizing: border-box;
+		padding: 12px 12px;
+		border-radius: 2px;
+		white-space: nowrap;
 
-			.form-radio {
-				margin: 0;
-			}
-			.form-radio__label {
-				margin: 8px;
-			}
+		&.checked {
+			border: 1px solid var(--color-accent);
 		}
+
+		.form-radio:checked::before {
+			background: var(--color-accent);
+		}
+
+		small {
+			display: block;
+			font-size: 0.75rem;
+			font-style: italic;
+		}
+	}
+
+	.form-select {
+		margin-top: 12px;
+		width: 100%;
 	}
 
 	.deploy-toggle {
@@ -71,5 +65,15 @@
 	.components-form-toggle {
 		margin-left: 5px;
 		margin-top: 1px;
+	}
+
+	.deployment-style {
+		flex: 1;
+		border: 1px solid var(--studio-gray-5);
+		box-sizing: border-box;
+		padding: 24px;
+		border-radius: 2px;
+		max-height: 136px;
+		background-color: var(--studio-gray-0);
 	}
 }
