Update disabled button border color

--- a/client/blocks/importer/wordpress/import-everything/import-users/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/import-users/style.scss
@@ -47,6 +47,10 @@
 			@include break-mobile {
 				width: auto;
 			}
+
+			&:disabled {
+				border-color: var(--color-neutral-5);
+			}
 		}
 	}
 
