--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -795,3 +795,13 @@ button.site-settings__general-settings-set-guessed-timezone.button.is-borderless
 	font-size: $font-body-small;
 	font-style: italic;
 }
+
+.support-info + .jetpack-module-toggle,
+.support-info + .components-toggle-control,
+.support-info + .custom-content-types__module-settings {
+	display: flex;
+}
+
+.jetpack-module-toggle {
+	flex-direction: column;
+}
