--- a/client/my-sites/github-deployments/components/repositories/style.scss
+++ b/client/my-sites/github-deployments/components/repositories/style.scss
@@ -57,7 +57,7 @@
 		display: flex;
 		flex-direction: column;
 		span {
-			color: var(--Gray-Gray-40, #787C82);
+			color: var(--Gray-Gray-40, #787c82);
 			font-size: $font-body-small;
 		}
 	}
