--- a/client/my-sites/github-deployments/components/repositories/style.scss
+++ b/client/my-sites/github-deployments/components/repositories/style.scss
@@ -55,7 +55,7 @@
 
 	&__account {
 		display: flex;
-		flex-direction: column;
+		align-items: center;
 		span {
 			color: var(--Gray-Gray-40, #787c82);
 			font-size: $font-body-small;
