GitHub deployments/update deployments table (#87451)
* Make default repo order name_asc

* GitHub deployments: build out deployment list table + menu

* More work on deployments table row

* Fix style lint issues

* Fix css

--- a/client/my-sites/github-deployments/components/repositories/style.scss
+++ b/client/my-sites/github-deployments/components/repositories/style.scss
@@ -56,7 +56,10 @@
 	&__account {
 		display: flex;
 		align-items: center;
-		gap: 4px;
+		span {
+			color: var(--Gray-Gray-40, #787c82);
+			font-size: $font-body-small;
+		}
 	}
 
 	tr td:last-child {
