--- a/client/my-sites/invites/invite-accept-logged-out/style.scss
+++ b/client/my-sites/invites/invite-accept-logged-out/style.scss
@@ -73,6 +73,11 @@ body.is-section-accept-invite {
 				color: var(--color-text-inverted);
 				box-shadow: none;
 			}
+			&:disabled {
+				background: var(--studio-gray-20);
+				border: 1px solid var(--studio-gray-20);
+				color: var(--color-surface);
+			}
 		}
 		label.form-label {
 			color: var(--studio-gray-60, #50575e);
