update a8c+wp logo

--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -265,7 +265,8 @@ $breakpoint-mobile: 782px; //Mobile size.
 	}
 }
 
-.login__jetpack-plus-wpcom-logo {
+.login__jetpack-plus-wpcom-logo,
+.login__a4a-plus-wpcom-logo {
 	margin: 40px 0 16px;
 }
 
