--- a/client/my-sites/plans-features-main/style.scss
+++ b/client/my-sites/plans-features-main/style.scss
@@ -24,6 +24,13 @@ $plan-features-header-banner-height: 20px;
 	}
 }
 
+.plans-features-main {
+	.plans-grid-next__features-grid,
+	.plans-grid-next__comparison-grid {
+		margin-top: 50px;
+	}
+}
+
 .is-2023-pricing-grid {
 	margin: 0 auto;
 
@@ -39,7 +46,6 @@ $plan-features-header-banner-height: 20px;
 		margin: 0 20px;
 		padding: 0 0 10px;
 		overflow-x: visible;
-		padding-top: 35px; // enough to cover `plans-grid__popular-badge` repositioning (top: -35px)
 	}
 }
 
@@ -126,10 +132,6 @@ $plan-features-header-banner-height: 20px;
 .is-2023-pricing-grid .plan-features-2023-grid__content {
 	position: relative;
 	margin: auto;
-}
-
-.plans-features-main__group.is-wpcom.is-2023-pricing-grid {
-	margin-top: 24px;
 }
 
 /**
