--- a/client/my-sites/plugins/plugins-browser/style.scss
+++ b/client/my-sites/plugins/plugins-browser/style.scss
@@ -88,17 +88,17 @@ body.is-section-plugins #primary .main.is-logged-out {
 		padding: 0 8px;
 
 		.responsive-toolbar-group__button-item {
-			padding: 0 16px;
+			padding: 4px 12px;
 		}
 		.responsive-toolbar-group__button-item:not([class*="is-pressed"]):hover::before {
 			background: rgba(6, 117, 196, 0.1);
 		}
 	}
 
-	.components-button.is-pressed::before {
+	.responsive-toolbar-group__button-item.is-pressed::before {
 		background: var(--studio-blue-50);
-		left: 4px;
-		right: 4px;
+		left: 0;
+		right: 0;
 	}
 }
 // Jetpack injects a banner on the /plugins page for jetpack sites
