--- a/client/blocks/importer/wordpress/import-everything/import-users/style.scss
+++ b/client/blocks/importer/wordpress/import-everything/import-users/style.scss
@@ -3,7 +3,7 @@
 @import "@wordpress/base-styles/mixins";
 
 .import__user-migration {
-	margin-bottom: 32px;
+	margin-bottom: 2rem;
 
 	@include break-small {
 		margin-bottom: 0;
@@ -34,7 +34,7 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
-		margin-top: 16px;
+		margin-top: 1rem;
 
 		.is-link {
 			color: var(--studio-gray-100);
@@ -56,7 +56,7 @@
 
 	.import__user-migration-footer {
 		font-size: 0.75rem;
-		margin: 1rem 24px 0 auto;
+		margin: 1rem 1.5rem 0 auto;
 		text-align: center;
 		width: 100%;
 		max-width: 361px;
@@ -72,16 +72,16 @@
 	display: flex;
 	align-items: center;
 	box-shadow: none;
-	padding: 16px 0 16px 0;
+	padding: 1rem 0 1rem 0;
 	flex-wrap: wrap;
 
 	@include break-mobile {
-		padding: 20px 0 20px 0;
+		padding: 1.25rem 0 1.25rem 0;
 		flex-wrap: nowrap;
 	}
 
 	.components-checkbox-control__input-container {
-		margin-right: 16px;
+		margin-right: 1rem;
 	}
 
 	.imported-user-item__display-name {
@@ -101,7 +101,7 @@
 	}
 
 	.imported-user-item__roles {
-		margin-left: 40px;
+		margin-left: 2.5rem;
 		flex-basis: 100%;
 		display: flex;
 		margin-top: 0.5rem;
@@ -124,7 +124,7 @@
 			color: var(--color-text-subtle);
 			font-size: 0.75rem;
 			margin-left: 0;
-			padding: 2px 6px;
+			padding: 0.125rem 0.375rem;
 			white-space: pre;
 
 			&:first-child {
