destinationDirectory logic added

--- a/client/my-sites/github-deployments/components/repositories/create-repository/style.scss
+++ b/client/my-sites/github-deployments/components/repositories/create-repository/style.scss
@@ -7,6 +7,10 @@
 
 	.form-label {
 		font-weight: 500;
+
+		&[for="destinationDirectory"] {
+			margin-top: 24px;
+		}
 	}
 
 	.repository-name-formfieldset {
