--- a/client/my-sites/promote-post-i2/components/campaign-item/style.scss
+++ b/client/my-sites/promote-post-i2/components/campaign-item/style.scss
@@ -7,9 +7,33 @@
 		@include blazepress-data-row;
 	}
 
+	.campaign-item__title-row .campaign-item__post-type {
+		font-size: 0.875rem;
+		font-weight: 400;
+		color: var(--studio-gray-40);
+		line-height: 20px;
+	}
+
+	.campaign-item__title-row .campaign-item__post-type-mobile {
+		display: block;
+		font-size: 0.75rem;
+		font-weight: 400;
+		color: var(--studio-gray-40);
+		line-height: 20px;
+	}
+
 	.campaign-item__impressions,
-	.campaign-item__item__clicks {
-		text-align: center;
+	.campaign-item__item__clicks,
+	.campaign-item__conversion {
+		text-align: left;
+	}
+
+	.campaign-item__post-details-button {
+		border-radius: 4px;
+		border: 1.5px solid var(--color-accent);
+		color: var(--color-accent);
+		background-color: var(--color-surface);
+		box-shadow: none;
 	}
 }
 
@@ -21,13 +45,18 @@
 			display: flex;
 			justify-content: space-between;
 
+			.campaign-item__stats-mobile {
+				align-self: center;
+			}
+
 			// View link
 			.campaign-item__view-link,
 			.campaign-item__view-link:visited {
 				@include blazepress-data-row-font-mobile;
-
-				color: var(--studio-gray-100);
-				text-decoration: underline;
+				align-self: start;
+				height: 28px;
+				background-color: var(--studio-gray-0);
+				color: #50575e;
 			}
 		}
 
