--- a/client/my-sites/promote-post-i2/components/search-bar/style.scss
+++ b/client/my-sites/promote-post-i2/components/search-bar/style.scss
@@ -33,6 +33,13 @@ $font-sf-pro-display: "SF Pro Display", $sans;
 				&.post-type .select-dropdown__container {
 					min-width: 160px;
 				}
+				&.campaigns-filter .select-dropdown__container {
+					min-width: 160px;
+				}
+
+				&.campaigns-order-by .select-dropdown__container {
+					min-width: 100px;
+				}
 			}
 		}
 
@@ -105,7 +112,32 @@ $font-sf-pro-display: "SF Pro Display", $sans;
 			}
 
 			.segmented-control__item:not(.is-selected) .segmented-control__link:hover {
-				background-color: transparent;
+				background-color: #f6f7f7 !important;
+				border: none;
+				border-radius: 2px;
+				box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+				height: 20px;
+				margin: 4px 0;
+				padding: 8px 16px;
+				.segmented-control__text {
+					@include blazepress-campaign-filter-item;
+
+					color: var(--studio-gray-100);
+				}
+			}
+
+			.segmented-control__item:not(.is-selected .segmented-control__link:hover) {
+				&:first-child {
+					.segmented-control__link {
+						margin-left: 4px;
+					}
+				}
+
+				&:last-child {
+					.segmented-control__link {
+						margin-right: 4px;
+					}
+				}
 			}
 		}
 	}
