add site migration to the site setup css list

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -73,6 +73,7 @@ button {
 .new-hosted-site,
 .import-hosted-site,
 .site-setup,
+.site-migration,
 .import-focused,
 .plugin-bundle,
 .newsletter-setup,
