--- a/client/my-sites/github-deployments/deployment-management/style.scss
+++ b/client/my-sites/github-deployments/deployment-management/style.scss
@@ -30,21 +30,32 @@
 			}
 		}
 
-		.form-text-input-with-affixes {
-			span {
+		.foldable-card {
+			&__header {
+				min-height: auto !important;
+				padding: 12px;
+			}
+			&__main {
+				flex: none;
+			}
+		}
+
+		&__workflow-card {
+			padding: 12px;
+			display: flex;
+			align-items: center;
+		}
+
+		.card,
+		.foldable-card {
+			> div,
+			.foldable-card__main > div {
 				display: flex;
-				background: #fff;
+				align-items: center;
 			}
 
-			input {
-				border-left: none;
-			}
-
-			&:first-of-type {
-				margin-bottom: 8px;
-			}
-
-			svg {
+			.custom-icons {
+				margin-right: 6px;
 				border-radius: 50%;
 				color: #fff;
 				fill: #fff;
@@ -58,13 +69,7 @@
 			}
 		}
 
-		.github-deployments-connect-repository__repository {
-			display: block;
-			border-top: none;
-			padding: 16px;
-		}
-
-		.github-deployments-connect-repository__actions {
+		&__actions {
 			margin-top: 16px;
 		}
 	}
@@ -84,13 +89,6 @@
 	&__deployment-style {
 		padding: 24px;
 		width: 50%;
-
-		.deployment-style {
-			border-radius: 2px;
-			background-color: var(--studio-gray-0);
-			border: 1px solid var(--color-neutral-10);
-			padding: 24px;
-		}
 	}
 
 	.support-info {
