--- a/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/connect-url/style.scss
@@ -43,6 +43,11 @@
 .connect-url__create-sites-list {
 	padding: 0;
 	margin: 0;
+	display: flex;
+}
+
+.connect-url__create-sites-list ul {
+	margin: 0;
 }
 
 .connect-url__create-sites-list li {
@@ -55,15 +60,17 @@
 	margin-right: 1rem;
 }
 
-.connect-url__create-sites-spinner-animation {
-	transform-origin: center;
-	animation: spinner 0.6s linear infinite;
+.connect-url__create-sites-list-successful,
+.connect-url__create-sites-list-unsuccessful {
+	flex: 1;
 }
 
-@keyframes spinner {
-	100% {
-		transform: rotate(360deg);
-	}
+.connect-url__create-sites-list-successful li > svg {
+	fill: var(--studio-jetpack-green-40);
+}
+
+.connect-url__create-sites-list-unsuccessful li > svg {
+	fill: var(--studio-red-40);
 }
 
 .connect-url__create-sites-quantity {
