Help Center: Remove right offset for classic view

--- a/apps/editing-toolkit/editing-toolkit-plugin/help-center/src/help-center.scss
+++ b/apps/editing-toolkit/editing-toolkit-plugin/help-center/src/help-center.scss
@@ -48,12 +48,16 @@
 	}
 }
 
+body.is-nav-unification {
+	#wpadminbar #wp-toolbar #wp-admin-bar-help-center {
+		margin-right: 5px;
+	}
+}
+
 #wpadminbar #wp-toolbar {
 	#wp-admin-bar-help-center {
-		position: relative;
 		padding: 0;
 		width: 36px;
-		right: 5px;
 		display: none;
 
 		@include breakpoint-deprecated( ">960px" ) {
