--- a/client/layout/global-sidebar/style.scss
+++ b/client/layout/global-sidebar/style.scss
@@ -121,6 +121,36 @@
 		}
 	}
 
+	.sidebar__footer {
+		display: flex;
+		align-items: center;
+		padding: 16px 24px 16px 24px;
+		border-color: var(--studio-gray-90);
+		border-top-style: solid;
+		border-top-width: 1px;
+		.sidebar__menu-icon {
+			margin-right: 0;
+		}
+		.sidebar__footer-link {
+			display: flex;
+			align-items: center;
+			margin-left: 20px;
+			height: 40px;
+			&:first-child {
+				margin-left: 4px;
+			}
+		}
+		.sidebar__item-help {
+			display: flex;
+			align-items: center;
+			margin-left: 20px;
+			height: 40px;
+			svg {
+				fill: var(--studio-white);
+			}
+		}
+	}
+
 	.sidebar-notifications {
 		.sidebar__menu-icon.sidebar_svg-notifications {
 			fill: var(--color-sidebar-background);
